--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "devDependencies": {
-    "serverless": "^4.4.7",
-    "serverless-offline": "^14.3.3"
+    "serverless-offline": "^14.3.3",
+    "serverless-offline-sns": "^0.78.1"
   },
   "dependencies": {
-    "serverless-offline-sns": "^0.78.1"
+    "serverless": "^4.4.7"
   }
 }
